spliting up location fields

--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "thousand-assembly",
+   "id": "protective-operator",
    "metadata": {},
    "source": [
     "<h1>Process Data</h1>\n",
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "military-douglas",
+   "execution_count": 2,
+   "id": "bulgarian-bottom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "literary-remains",
+   "id": "suffering-henry",
    "metadata": {},
    "source": [
     "<h2>Load HTML File</h2>"
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "small-challenge",
+   "execution_count": 30,
+   "id": "empty-domestic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "devoted-bicycle",
+   "execution_count": 31,
+   "id": "considerable-switzerland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,22 +53,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "twelve-tiffany",
+   "execution_count": 34,
+   "id": "regulated-feedback",
    "metadata": {},
    "outputs": [],
    "source": [
     "happiness_df = happiness_df.rename(columns = {'City': 'Location'})\n",
     "\n",
-    "happiness_df['State'] = happiness_df['Location'].apply(lambda s: s.split(\",\")[-1])\n",
-    "happiness_df['City'] = happiness_df['Location'].apply(lambda s: s.split(\",\")[0])\n",
+    "happiness_df['state'] = happiness_df['Location'].apply(lambda s: s.split(\",\")[-1])\n",
+    "happiness_df['city'] = happiness_df['Location'].apply(lambda s: s.split(\",\")[0])\n",
     "\n",
     "happiness_df = happiness_df.drop(columns = ['Location'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "awful-awareness",
+   "id": "handy-chapter",
    "metadata": {},
    "source": [
     "<h2>Load Transportation Data</h2>"
@@ -76,8 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "rational-liberal",
+   "execution_count": 13,
+   "id": "taken-newark",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,145 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "inside-slide",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['OBJECTID',\n",
-       " 'GEOID10',\n",
-       " 'GEOID20',\n",
-       " 'STATEFP',\n",
-       " 'COUNTYFP',\n",
-       " 'TRACTCE',\n",
-       " 'BLKGRPCE',\n",
-       " 'CSA',\n",
-       " 'CSA_Name',\n",
-       " 'CBSA',\n",
-       " 'CBSA_Name',\n",
-       " 'CBSA_POP',\n",
-       " 'CBSA_EMP',\n",
-       " 'CBSA_WRK',\n",
-       " 'Ac_Total',\n",
-       " 'Ac_Water',\n",
-       " 'Ac_Land',\n",
-       " 'Ac_Unpr',\n",
-       " 'TotPop',\n",
-       " 'CountHU',\n",
-       " 'HH',\n",
-       " 'P_WrkAge',\n",
-       " 'AutoOwn0',\n",
-       " 'Pct_AO0',\n",
-       " 'AutoOwn1',\n",
-       " 'Pct_AO1',\n",
-       " 'AutoOwn2p',\n",
-       " 'Pct_AO2p',\n",
-       " 'Workers',\n",
-       " 'R_LowWageWk',\n",
-       " 'R_MedWageWk',\n",
-       " 'R_HiWageWk',\n",
-       " 'R_PCTLOWWAGE',\n",
-       " 'TotEmp',\n",
-       " 'E5_Ret',\n",
-       " 'E5_Off',\n",
-       " 'E5_Ind',\n",
-       " 'E5_Svc',\n",
-       " 'E5_Ent',\n",
-       " 'E8_Ret',\n",
-       " 'E8_off',\n",
-       " 'E8_Ind',\n",
-       " 'E8_Svc',\n",
-       " 'E8_Ent',\n",
-       " 'E8_Ed',\n",
-       " 'E8_Hlth',\n",
-       " 'E8_Pub',\n",
-       " 'E_LowWageWk',\n",
-       " 'E_MedWageWk',\n",
-       " 'E_HiWageWk',\n",
-       " 'E_PctLowWage',\n",
-       " 'D1A',\n",
-       " 'D1B',\n",
-       " 'D1C',\n",
-       " 'D1C5_RET',\n",
-       " 'D1C5_OFF',\n",
-       " 'D1C5_IND',\n",
-       " 'D1C5_SVC',\n",
-       " 'D1C5_ENT',\n",
-       " 'D1C8_RET',\n",
-       " 'D1C8_OFF',\n",
-       " 'D1C8_IND',\n",
-       " 'D1C8_SVC',\n",
-       " 'D1C8_ENT',\n",
-       " 'D1C8_ED',\n",
-       " 'D1C8_HLTH',\n",
-       " 'D1C8_PUB',\n",
-       " 'D1D',\n",
-       " 'D1_FLAG',\n",
-       " 'D2A_JPHH',\n",
-       " 'D2B_E5MIX',\n",
-       " 'D2B_E5MIXA',\n",
-       " 'D2B_E8MIX',\n",
-       " 'D2B_E8MIXA',\n",
-       " 'D2A_EPHHM',\n",
-       " 'D2C_TRPMX1',\n",
-       " 'D2C_TRPMX2',\n",
-       " 'D2C_TRIPEQ',\n",
-       " 'D2R_JOBPOP',\n",
-       " 'D2R_WRKEMP',\n",
-       " 'D2A_WRKEMP',\n",
-       " 'D2C_WREMLX',\n",
-       " 'D3A',\n",
-       " 'D3AAO',\n",
-       " 'D3AMM',\n",
-       " 'D3APO',\n",
-       " 'D3B',\n",
-       " 'D3BAO',\n",
-       " 'D3BMM3',\n",
-       " 'D3BMM4',\n",
-       " 'D3BPO3',\n",
-       " 'D3BPO4',\n",
-       " 'D4A',\n",
-       " 'D4B025',\n",
-       " 'D4B050',\n",
-       " 'D4C',\n",
-       " 'D4D',\n",
-       " 'D4E',\n",
-       " 'D5AR',\n",
-       " 'D5AE',\n",
-       " 'D5BR',\n",
-       " 'D5BE',\n",
-       " 'D5CR',\n",
-       " 'D5CRI',\n",
-       " 'D5CE',\n",
-       " 'D5CEI',\n",
-       " 'D5DR',\n",
-       " 'D5DRI',\n",
-       " 'D5DE',\n",
-       " 'D5DEI',\n",
-       " 'D2A_Ranked',\n",
-       " 'D2B_Ranked',\n",
-       " 'D3B_Ranked',\n",
-       " 'D4A_Ranked',\n",
-       " 'NatWalkInd',\n",
-       " 'Shape_Length',\n",
-       " 'Shape_Area']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(locations_df.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "dimensional-tunnel",
+   "execution_count": 15,
+   "id": "corporate-complex",
    "metadata": {},
    "outputs": [
     {
@@ -610,25 +473,92 @@
        "[220740 rows x 117 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "locations_df.rename(columns = {\"GEOID10\": \"2010_fips_code\", \"GEOID20\" : \"2018_fips_code\", \n",
-    "                    \"STATEFP\": 'state_fips_code', \"COUNTYFP\": \"county_fips_code\", \n",
-    "                    \"Ac_Total\": 'total_acres', 'Ac_Land': 'land_acres', 'Ac_Water': 'water_acres', \n",
-    "                    \"Ac_Unpr\": \"unprotected_acres\", \"CountHU\": \"total_housing_units\", \"HH\": \"households\", \n",
-    "                    \"P_WrkAge\": 'percent_working_age', 'AutoOwn0': 'owns_no_cars', \n",
-    "                    'Pct_AO0': 'percent_owns_no_cars', \"AutoOwn1\": 'owns_one_car', \"Pct_AO1\": \"percent_owns_one_car\",\n",
-    "                    \"AutoOwn2p\": \"owns_two_plus_cars\", \"Pct_AO2\": 'percent_owns_2_plus_cars'})"
+    "# still deciding what to do with names\n",
+    "\n",
+    "# locations_df.rename(columns = {\"GEOID10\": \"2010_fips_code\", \"GEOID20\" : \"2018_fips_code\", \n",
+    "#                     \"STATEFP\": 'state_fips_code', \"COUNTYFP\": \"county_fips_code\", \n",
+    "#                     \"Ac_Total\": 'total_acres', 'Ac_Land': 'land_acres', 'Ac_Water': 'water_acres', \n",
+    "#                     \"Ac_Unpr\": \"unprotected_acres\", \"CountHU\": \"total_housing_units\", \"HH\": \"households\", \n",
+    "#                     \"P_WrkAge\": 'percent_working_age', 'AutoOwn0': 'owns_no_cars', \n",
+    "#                     'Pct_AO0': 'percent_owns_no_cars', \"AutoOwn1\": 'owns_one_car', \"Pct_AO1\": \"percent_owns_one_car\",\n",
+    "#                     \"AutoOwn2p\": \"owns_two_plus_cars\", \"Pct_AO2\": 'percent_owns_2_plus_cars'})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "nuclear-element",
+   "metadata": {},
+   "source": [
+    "<h3>Get City and State Names</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "mature-telescope",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "locations_df['metro_are_cities'] = locations_df['CBSA_Name'].apply(lambda s: str(s).split(\",\")[0])\n",
+    "locations_df['metro_area_states'] = locations_df['CBSA_Name'].apply(lambda s: str(s).split(\",\")[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "applicable-strand",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "locations_df['ci'] = locations_df['metro_are_cities'].apply(lambda s: s.split(\"-\"))\n",
+    "locations_df['metro_states']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "liked-consumption",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([' TX', 'nan', ' TX-AR', ' VA-NC', ' VA', ' DC-VA-MD-WV', ' VA-WV',\n",
+       "       ' TN-VA', ' WV-VA', ' AL', ' GA-AL', ' AL-GA', ' AK', ' AZ', ' AR',\n",
+       "       ' AR-OK', ' TN-MS-AR', ' CA', ' CO', ' CT', ' MA-CT',\n",
+       "       ' PA-NJ-DE-MD', ' MD-DE', ' DE', ' FL', ' GA', ' GA-SC', ' TN-GA',\n",
+       "       ' HI', ' ID', ' ID-WA', ' WY-ID', ' OR-ID', ' UT-ID', ' IL',\n",
+       "       ' IL-IN-WI', ' MO-IL', ' IA-IL', ' IL-MO', ' KY-IL', ' IA-IL-MO',\n",
+       "       ' IN', ' KY-IN', ' IN-MI', ' IN-KY', ' OH-KY-IN', ' IA', ' NE-IA',\n",
+       "       ' IA-NE-SD', ' MO-KS', ' KS', ' KY', ' WV-KY-OH', ' TN-KY', ' LA',\n",
+       "       ' MS-LA', ' ME', ' MD', ' MD-WV', ' MA', ' MA-NH', ' RI-MA', ' MI',\n",
+       "       ' WI-MI', ' MI-WI', ' MN-WI', ' MN', ' ND-MN', ' WI-MN', ' MS',\n",
+       "       ' MO', ' MT', ' NE', ' NV', ' NH', ' NH-VT', ' NY-NJ-PA', ' NJ',\n",
+       "       ' PA-NJ', ' NM', ' NY', ' NC', ' NC-SC', ' SC-NC', ' ND', ' OH',\n",
+       "       ' WV-OH', ' OH-PA', ' OK', ' OR', ' OR-WA', ' PA', ' SC', ' SD',\n",
+       "       ' TN', ' UT', ' VT', ' WA', ' WV', ' WI', ' WY', ' PR'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "locations_df['state'].unique()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mature-tomato",
+   "id": "magnetic-testimony",
    "metadata": {},
    "outputs": [],
    "source": []
